<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="3"
    android:gravity="bottom">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number7"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number8"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number9"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number9" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number4"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number5"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number6"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number6" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number1"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number2"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number3"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number3" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/number0"
            style="@style/ButtonsStyle"
            android:onClick="numberButtonsPress"
            android:text="@string/number0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numberDot"
            style="@style/ButtonsStyle"
            android:onClick="dotButtonsPress"
            android:text="@string/numberDot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/numberEqual"
            style="@style/ButtonsStyle"
            android:onClick="equalsPress"
            android:text="@string/numberEqual" />
    </TableRow>
</TableLayout>