<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="3"
    android:gravity="bottom">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/sin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:paddingTop="0dp"
            android:text="@string/sin"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cos"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:paddingTop="0dp"
            android:text="@string/cos"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tan"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:paddingTop="0dp"
            android:text="@string/tan"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/naturalLogarithm"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/naturalLogarithm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logarithm"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/logarithm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/squareRoot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/squareRoot"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/pi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="numberButtonsPress"
            android:text="@string/pi"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/numberE"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="numberButtonsPress"
            android:text="@string/numberE"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/degree"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/degree"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/openBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/openBracket"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/closeBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/closeBracket"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exclamation"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:onClick="additionalButtonsPress"
            android:text="@string/exclamation"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/key_text_size"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>