<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="@dimen/action_key_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/division"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/division"
        android:textColor="@color/black"
        android:textSize="@dimen/action_key_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/multiplication"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/multiplication"
        android:textColor="@color/black"
        android:textSize="@dimen/action_key_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/subtraction"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/subtraction"
        android:textColor="@color/black"
        android:textSize="@dimen/action_key_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addition"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:text="@string/addition"
        android:textColor="@color/black"
        android:textSize="@dimen/action_key_text_size"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>